# crown-and-dial

./: .bladeformatterrc  .env.example  .gitignore  .phpstorm.meta.php  Caddyfile  Dockerfile  README.md  docker-compose.yml  output.txt  package-lock.json  phpunit.xml  vite.config.js
app/Models/: Address.php  BasketItem.php  Brand.php  Card.php  Category.php  Inventory.php  InventoryMovement.php  Message.php  Order.php  ProductReturn.php  Review.php  Supplier.php  User.php  Watch.php  WatchImage.php  WatchInventorySize.php  WatchOrder.php
bootstrap/: app.php
config/: app.php  watch_sizes.php
database/factories/: UserFactory.php
database/migrations/: 2025_11_24_104026_create_addresses_table.php  2025_11_24_105641_create_cards_table.php  2025_11_24_175232_create_suppliers_table.php  2025_11_24_175639_create_watches_table.php  2025_11_24_181400_create_inventories_table.php  2025_11_24_181731_create_orders_table.php  2025_11_27_112423_create_reviews_table.php  2025_11_27_112510_create_watch_orders_table.php  2025_11_30_202800_create_basket_items_table.php  2025_12_01_191245_create_messages_table.php  2026_01_22_000002_create_inventory_movements_table.php  2026_01_22_000003_add_shipment_fields_to_orders_table.php  2026_03_17_184711_create_watch_images_table.php  2026_03_20_000001_create_wishlists_table.php  2026_03_20_100100_add_size_to_inventory_movements_table.php  (+4 more)
docker/: entrypoint.sh
routes/: console.php  web.php
scraper/: .env.dev.example  main.py  pyproject.toml  requirements.txt
scraper/scripts/: config.py  image.py  repository.py  watchshop.py
(+106 files in other folders)
