[project]
name = "scraper"
version = "0.1.0"
description = ""
requires-python = ">=3.12,<4"

dependencies = [
    "playwright>=1.50.0,<2.0.0",
    "pymysql>=1.1.1,<2.0.0",
    "python-dotenv>=1.0.1,<2.0.0",
    "psycopg2-binary>=2.9.10,<3.0.0",
    "pycryptodome>=3.23.0,<4.0.0",
    "beautifulsoup4 (>=4.14.3,<5.0.0)"
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.5,<9.0.0",
    "pytest-asyncio>=0.25.3,<0.26.0",
    "pytest-mock>=3.14.0,<4.0.0"
]

[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

